--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,4 +4,44 @@
 
 .navbar {
   margin-bottom: 30px;
+  text-align: center;
+}
+
+.navbar-custom {
+  background-color: #345242;
+}
+/* change the brand and text color */
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+  color: rgba(255,255,255,.8);
+}
+/* change the link color */
+.navbar-custom .navbar-nav .nav-link {
+  color: rgba(255,255,255,.5);
+}
+/* change the color of active or hovered links */
+.navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+  color: #ffffff;
+}
+
+footer {
+  background-color: #345242;
+  bottom: 0;
+  left: 0;
+  height: 10%;
+  position: fixed;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  color: #ffffff;
+}
+
+footer a {
+  color: rgba(255,255,255,.5);
+  text-decoration: none;
+}
+
+foooter a:hover {
+  color: #ffffff;
 }
