--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,20 @@
-<div class="home">
-  <img class="ufmg-logo" src="assets/ufmg-logo.png" alt="Universidade Federal de Minas Gerais">
-
-  <h1>Trabalho Final de Administração Financeira</h1>
-  <h2>2021/01</h2>
-
-  <div class="autores">
-    <p>Vitor Ribeiro dos Santos</p>
-
-    <p>Ewerton</p>
-
-    <p>Jonas</p>
+<div class="banner">
+  <div class="banner-content">
+    <h1>Calculadora Financeira Online</h1>
+    <p>Faça seus calculos aqui! </p>
   </div>
+</div>
+
+<div class="home">
+
 
   <div class="descricao">
-    <p>Esta é uma calculadora financeira com fórmulas que estudamos durante o semestre, além de incluir também cálculos tais como de um Portfolio Replicante. O uso pode ser realizado tanto via computador a plataforma tanto por celular ou aparelhos com o acesso a internet.</p>
+    <p>Navegue pelo menu superior para acessar os diferentes calculos.</p>
+    <p>Esta é uma calculadora financeira com fórmulas que estudamos durante a disclina de administração financeira.
+      O uso pode da plataforma pode ser realizado tanto por desktop ou aparelhos com o acesso a internet.</p>
 
-    <p>Navegue pelo menu superior para acessar as diferentes páginas do trabalho.</p>
+
   </div>
 
-  <div class="github-link">
-    <a href="#" target="_blank">
-      <img src="assets/github.png" alt="Código Fonte">
-    </a>
-  </div>
 </div>
 
