--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
-  <a class="navbar-brand" href="/">Calculadora Financeira</a>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto ml-auto">
-      <!-- Menu com tabs -->
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/capm">
-          CAPM
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/wacc">
-          WACC
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/conversao-de-juros">
-          Conversão de Juros
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/portfolio-replicante">
-          Portfolio Replicante
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/time-value-money">
-          Time Value Money
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/custo-acoes-alavancadas">
-          Custo Ações Alavancadas
-        </a>
-      </li>
-    </ul>
+  <div class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Calculadora Financeira</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="/capm">CAPM</a>
+      <a class="dropdown-item" href="/wacc">WACC</a>
+      <a class="dropdown-item" href="/conversao-de-juros">Conversão de Juros</a>
+      <a class="dropdown-item" href="/portfolio-replicante">Portfolio Replicante</a>
+      <a class="dropdown-item" href="/time-value-money">Time Value Money</a>
+      <a class="dropdown-item" href="/custo-acoes-alavancadas">Custo Ações Alavancadas</a>
+    </div>
   </div>
+
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button> -->
+
 </nav>
 
 <div class="container app-container">
