--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
       <a class="dropdown-item" href="/portfolio-replicante">Portfolio Replicante</a>
       <a class="dropdown-item" href="/time-value-money">Time Value Money</a>
       <a class="dropdown-item" href="/custo-acoes-alavancadas">Custo Ações Alavancadas</a>
+      <a class="dropdown-item" href="/calculo-juros">Calculo de Juros</a>
     </div>
   </div>
 
