implementation: informacoes de suguro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
   <div class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Calculadora Financeira</a>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="/capm">CAPM</a>
-      <a class="dropdown-item" href="/wacc">WACC</a>
-      <a class="dropdown-item" href="/conversao-de-juros">Conversão de Juros</a>
-      <a class="dropdown-item" href="/portfolio-replicante">Portfolio Replicante</a>
-      <a class="dropdown-item" href="/time-value-money">Time Value Money</a>
-      <a class="dropdown-item" href="/custo-acoes-alavancadas">Custo Ações Alavancadas</a>
       <a class="dropdown-item" href="/calculo-juros">Calculo de Juros</a>
+      <a class="dropdown-item" href="/capm">CAPM</a>
+      <a class="dropdown-item" href="/conversao-de-juros">Conversão de Juros</a>
+      <a class="dropdown-item" href="/custo-acoes-alavancadas">Custo Ações Alavancadas</a>
+      <a class="dropdown-item" href="/informacao-de-seguro">Informação de Seguro</a>
+      <a class="dropdown-item" href="/time-value-money">Time Value Money</a>
+      <a class="dropdown-item" href="/wacc">WACC</a>
     </div>
   </div>
 
@@ -31,8 +31,8 @@
       <div class="copyright">
           © 2021, feito com por
         <a href="https://github.com/EwertonDCSilv" rel="noreferrer noopener" target="_blank">Ewerton Silva</a>,
-        <a href="https://github.com/" rel="noreferrer noopener" target="_blank">Jonas Trindade</a> e
-        <a href="https://github.com/" rel="noreferrer noopener" target="_blank">Vitor Ribeiro</a>
+        <a href="https://github.com/jonastrindade" rel="noreferrer noopener" target="_blank">Jonas Trindade</a> e
+        <a href="https://github.com/vitriber" rel="noreferrer noopener" target="_blank">Vitor Ribeiro</a>
       </div>
     </div>
   </footer>
