--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
   <div class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Calculadora Financeira</a>
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/" role="button" aria-haspopup="true" aria-expanded="false">Calculadora Financeira</a>
     <div class="dropdown-menu">
+      <a class="dropdown-item" href="/">Home</a>
       <a class="dropdown-item" href="/calculo-juros">Calculo de Juros</a>
       <a class="dropdown-item" href="/capm">CAPM</a>
       <a class="dropdown-item" href="/conversao-de-juros">Conversão de Juros</a>
