--- a/src/app/capm/capm.component.html
+++ b/src/app/capm/capm.component.html
@@ -1,31 +1,30 @@
 <div class="content">
   <h2>O modelo de precificação de ativos financeiros (CAPM)</h2>
   <p>São necessárias três variaveis para calcular o custo, sendo essas:</p>
-  <input
+  <div class="content-input">
+    Rf%
+    <input
     [(ngModel)]="Rf"
     (keyup)="calculaCapm()"
     (change)="calculaCapm()"
     type="number"
-  />
-  Rf%
-  <br />
-  <br />
-  <input
-    [(ngModel)]="Beta"
-    (keyup)="calculaCapm()"
-    (change)="calculaCapm()"
-    type="number"
-  />
-  Beta
-  <br />
-  <br />
-  <input
-    [(ngModel)]="Rm"
-    (keyup)="calculaCapm()"
-    (change)="calculaCapm()"
-    type="number"
-  />
-  E(Rm)%
+    />
+    Beta
+    <input
+      [(ngModel)]="Beta"
+      (keyup)="calculaCapm()"
+      (change)="calculaCapm()"
+      type="number"
+    />
+    E(Rm)%
+    <input
+      [(ngModel)]="Rm"
+      (keyup)="calculaCapm()"
+      (change)="calculaCapm()"
+      type="number"
+    />
+  </div>
+
 
   <br />
   <br />
