--- a/src/app/capm/capm.component.css
+++ b/src/app/capm/capm.component.css
@@ -1,3 +1,14 @@
 .content {
   text-align: center;
 }
+
+.content-input {
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-input input {
+  margin-right: 5px;
+}
